--- a/chrome-extension/index.html
+++ b/chrome-extension/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>nhn-eat</title>
     <style>
       body {
         margin: 0;
@@ -15,7 +15,7 @@
   </head>
   <body>
     <iframe
-      src="https://sangcheol.s3.ap-northeast-2.amazonaws.com/index.html"
+      src="http://nmeat.sangcheol.com/"
       frameborder="0"
       height="550"
       width="600"
